# Telegram_Marketing_CRM

./: .env.example  .gitattributes  .gitignore  BUILD_MEMORY.md  CLAUDE.md  Caddyfile  README.md  Telegram_Marketing_CRM_Structure.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  cli.py  config.py  main.py  middleware.py  ratelimit.py  realtime.py
backend/app/api/: accounts.py  analytics.py  audit.py  auth.py  backups.py  bots.py  campaigns.py  contacts.py  destinations.py  health.py  inbox.py  proxies.py  sender.py  users.py  warmup.py
backend/app/auth/: __init__.py  dependencies.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/schemas/: account.py  analytics.py  auth.py  backup.py  bot.py  campaign.py  contact.py  destination.py  event.py  inbox.py  proxy.py  sender.py  user.py  warmup.py
backend/engine/: __init__.py  actions.py  app.py  bots_manager.py  health.py  listener.py  main.py  manager.py  proxy.py  resolve.py  schemas.py
backend/tests/: conftest.py  test_account_health.py  test_account_identity.py  test_accounts.py  test_analytics.py  test_auth.py  test_backups.py  test_bots.py  test_campaigns.py  test_contacts.py  test_destinations.py  test_engine_actions.py  test_hardening.py  test_health.py  test_inbox.py  test_inbox_archive.py  test_inbox_media.py  test_inbox_perf.py  test_inbox_ux.py  test_proxy_parse.py  test_sender.py  test_spambot_classify.py  test_warmup.py
backend/worker/: __init__.py  celery_app.py
docs/: DEPLOY.md
(+102 files in other folders)
